--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sqlite3": "^5.1.6",
+    "toml": "^3.0.0",
     "typescript": "5.1.3",
     "zustand": "^4.3.8"
   }
