--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "toml": "^3.0.0",
     "typescript": "5.1.3",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
