--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:prod": "cross-env NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,6 +14,7 @@
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "github-markdown-css": "^5.2.0",
