--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "github-markdown-css": "^5.2.0",
+    "iconv-lite": "^0.6.3",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
