--- a/package.json
+++ b/package.json
@@ -18,14 +18,11 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "github-markdown-css": "^5.2.0",
-    "iconv-lite": "^0.6.3",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sqlite3": "^5.1.6",
     "toml": "^3.0.0",
-    "typescript": "5.1.3",
-    "zustand": "^4.3.8"
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
