github-action CNAME steps 추가

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -12,6 +12,7 @@ jobs:
       - run: npm i
       - run: npm run build:prod
       - run: touch out/.nojekyll
+      - run: echo "preinpost.blog" > ./CNAME
 
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@main
